[package]
name = "reth-exex-walltime"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }

eyre = "0.6"

tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
jsonrpsee = { version = "0.23", features = ["server", "macros"] }

bincode = "1.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }

tokio = "1"

[features]
default = []
optimism = ["reth/optimism"]